updated java to 1.8